<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/baseline_arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/back_to_login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="bottom|center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="30sp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/forgot_password_"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/note_forgot_password_activity"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/round_email"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@drawable/default_field_background"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.Button.Fill"
            app:icon="@drawable/baseline_arrow_forward"
            app:iconGravity="end"
            android:text="@string/send_link"
            app:iconSize="16dp"
            android:theme="@style/Theme.Button.Fill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>